--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,8 @@
   "description": "server for example project",
   "main": "index.js",
   "scripts": {
-    "test": "npm test"
+    "test": "npm test",
+    "start": "node index.js"
   },
   "author": "bruce xu",
   "license": "ISC",
