--- a/client/package.json
+++ b/client/package.json
@@ -7,7 +7,8 @@
   },
   "dependencies": {
     "react": "^15.4.2",
-    "react-dom": "^15.4.2"
+    "react-dom": "^15.4.2",
+    "react-facebook-login": "^3.4.3"
   },
   "scripts": {
     "start": "react-scripts start",
