--- a/client/package.json
+++ b/client/package.json
@@ -8,7 +8,8 @@
   "dependencies": {
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
-    "react-facebook-login": "^3.4.3"
+    "react-facebook-login": "^3.4.3",
+    "react-router": "^3.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
